# SkyRL

./: pyproject.toml
skyrl-agent/skyrl_agent/integrations/skyrl_train/: trainer.py
skyrl-agent/skyrl_agent/integrations/tinker/: tinker_backend.py
skyrl-agent/skyrl_agent/integrations/verl/: skyagent_async_sglang_server.py  (+5 more)
skyrl-agent/tests/integration/: test_nmoe_verifier_integration.py  test_verl_backend.py
skyrl-gym/skyrl_gym/: core.py
skyrl-gym/tests/: test_gym_core.py
skyrl-gym/tests/integration/: test_gym_nmoe_integration.py
skyrl-train/: ANALYSIS_SUMMARY.txt  INTEGRATION_CODE_REFERENCE.md  INTEGRATION_VERIFICATION_REPORT.md  README.md  SGLANG_ENGINE_FINAL_AUDIT.md  SYNTAX_VERIFICATION_SUMMARY.txt  VERIFICATION_INDEX.md  pyproject.toml
skyrl-train/.beads/: issues.jsonl
skyrl-train/.claude/cache/agents/scout/: hidden_states_verification.md  latest-output.md  lora-audit.md  lora-efficient-rl-report.md  rl-logit-integration-report.md  rl-logit-processors-verification.md
skyrl-train/docs/: ALGORITHMS.md  API_REFERENCE.md  BACKEND_SELECTION.md  BATCH_SIZES.md  BENCHMARKING_GUIDE.md  CONFIG_REFERENCE.md  CUSTOM_ENVIRONMENTS.md  DATASET_GUIDE.md  DATA_FORMAT.md  ENVIRONMENT_VARIABLES.md  FAQ_SGLANG.md  GLOSSARY.md  MULTI_TURN_TRAINING.md  QUICKSTART_SGLANG.md  README.md  SGLANG_INTEGRATION_GUIDE.md  SGLANG_LIMITATIONS.md  STRUCTURED_OUTPUT_FOR_RL.md  TRAINING_STRATEGIES.md  TROUBLESHOOTING.md  TUTORIAL_SGLANG.md  VERSION_COMPATIBILITY.md  index.rst
skyrl-train/docs/examples/: sglang_backend.rst
skyrl-train/docs/getting-started/: installation.rst
skyrl-train/examples/: README.md
skyrl-train/examples/algorithms/: README.md
skyrl-train/examples/algorithms/cispo/: README.md
skyrl-train/examples/algorithms/custom_advantage_estimator/: README.md
skyrl-train/examples/algorithms/custom_policy_loss/: README.md
skyrl-train/examples/algorithms/drgrpo/: README.md
skyrl-train/examples/algorithms/gspo/: README.md
skyrl-train/examples/algorithms/reinforce++/: README.md
skyrl-train/examples/algorithms/rloo/: README.md
skyrl-train/examples/algorithms/sapo/: README.md
skyrl-train/examples/async/: async_trainer.py
skyrl-train/examples/flash_rl/: README.md
skyrl-train/examples/gptoss/: README.md  test_gptoss.py
skyrl-train/examples/gsm8k/: README.md  gsm8k-grpo-sglang-skypilot.yaml
skyrl-train/examples/livecodebench/: README.md
skyrl-train/examples/llm_as_a_judge/: README.md
skyrl-train/examples/lora/: README.md
skyrl-train/examples/megatron/: README.md
skyrl-train/examples/mini_swe_agent/: mini_swe_generator.py  mini_swe_utils.py
skyrl-train/examples/moe/: README.md
skyrl-train/examples/multiply/: README.md
skyrl-train/examples/nmoe/: README.md  config.yaml  run_training.sh
skyrl-train/examples/ppo/: README.md
skyrl-train/examples/remote_inference_engine/: README.md
skyrl-train/examples/search/retriever/: README.md  retrieval_server.py
skyrl-train/examples/sglang/: README.md  sglang_full_config_example.yaml  sglang_speculative_decoding_example.yaml
skyrl-train/examples/step_wise/: README.md
skyrl-train/examples/terminal_bench/: README.md
skyrl-train/examples/terminal_bench/generator/: terminal_bench_generator.py
skyrl-train/examples/text_to_sql/: README.md
skyrl-train/examples/tis_correction/: README.md
skyrl-train/examples/training_backends/: README.md
skyrl-train/examples/training_backends/fsdp/: README.md
skyrl-train/scripts/: benchmark_n_sampling.py  benchmark_weight_sync.py  preflight_check.sh  run_deepseek_v3_eval.sh
skyrl-train/skyrl_train/: evaluate.py  fully_async_trainer.py  model_factory.py  model_wrapper.py  model_wrapper_nmoe.py  trainer.py
skyrl-train/skyrl_train/config/: nmoe_grpo_config.yaml  ppo_base_config.yaml
skyrl-train/skyrl_train/config/experiment/: grpo_qwen2.5-0.5b_math500.yaml
skyrl-train/skyrl_train/config/nmoe_config/: nmoe_model.yaml
skyrl-train/skyrl_train/distributed/: fsdp_strategy.py  fsdp_utils.py  nmoe_weight_extractor.py
skyrl-train/skyrl_train/distributed/megatron/: megatron_strategy.py  megatron_utils.py  nmoe_megatron_strategy.py
skyrl-train/skyrl_train/entrypoints/: main_base.py
skyrl-train/skyrl_train/generators/: base.py  skyrl_gym_generator.py  utils.py
skyrl-train/skyrl_train/inference_engines/: base.py  inference_engine_client.py  inference_engine_client_http_endpoint.py  ray_wrapped_inference_engine.py  remote_inference_engine.py  utils.py
skyrl-train/skyrl_train/inference_engines/sglang/: rl_logit_processors.py  sglang_engine.py  sglang_server.py
skyrl-train/skyrl_train/inference_engines/vllm/: vllm_engine.py
skyrl-train/skyrl_train/utils/: utils.py
skyrl-train/skyrl_train/weight_sync/: __init__.py  base.py  broadcast_strategy.py  checkpoint_engine_strategy.py  cuda_ipc_strategy.py  transfer_strategy.py
skyrl-train/skyrl_train/workers/: worker.py
skyrl-train/skyrl_train/workers/fsdp/: fsdp_worker.py  fsdp_worker_nmoe.py
skyrl-train/skyrl_train/workers/megatron/: megatron_worker.py  nmoe_megatron_worker.py
skyrl-train/tests/: conftest.py  test_ep_gradient_sync.py  test_fsdp_worker_nmoe.py  test_model_wrapper_nmoe.py  test_nmoe_config.py  test_nmoe_weight_extractor.py  test_sglang_integration.py  test_sglang_nmoe_loader.py
skyrl-train/tests/cpu/: conftest.py
skyrl-train/tests/cpu/generators/: test_skyrl_gym_generator.py  test_skyrl_gym_generator_chat_templating.py  test_utils.py
skyrl-train/tests/cpu/utils/: test_ppo_utils.py
skyrl-train/tests/gpu/: conftest.py  runner.py  test_real_moe_inference.py  utils.py
skyrl-train/tests/gpu/b200/: __init__.py  test_fsdp_strategy_8gpu.py  test_megatron_strategy_8gpu.py
skyrl-train/tests/gpu/gpu_ci/: conftest.py  test_engine_generation.py  test_inference_engine_client_http_endpoint.py  test_lora.py  test_pause_and_continue_generation.py  test_policy_local_engines_e2e.py
skyrl-train/tests/integration/: __init__.py  test_cross_component_weight_sync.py  test_nmoe_fsdp_integration.py  test_nmoe_megatron_integration.py  test_skyrl_nmoe_rl_loop.py  test_skyrl_sglang_inference.py
(+4 files in other folders)
