[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyrl"
version = "0.1.0"
description = "A Post-Training Stack for LLMs"
authors = [
    { name = "NovaSkyAI Team"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

# Core dependencies - torch packages come from pytorch-nightly index (see [tool.uv])
dependencies = [
    # PyTorch B200/SM100 nightly - pinned versions
    "torch==2.11.0.dev20260202+cu128",
    "torchvision==0.25.0.dev20260202+cu128",
    "torchaudio==2.11.0.dev20260202+cu128",
    "torchao==0.16.0.dev20260202+cu128",
    "triton==3.6.0+git9844da95",

    # Core ML
    "numpy>=2.0.0,<3.0",
    "einops>=0.8.0,<1.0",
    "safetensors>=0.7.0,<1.0",

    # HuggingFace stack
    "transformers>=4.45.0,<5.0",
    "tokenizers>=0.20.0,<1.0",
    "huggingface_hub>=0.27.0,<1.0",
    "datasets>=3.0.0,<4.0",
    "accelerate>=1.0.0,<2.0",
    "peft>=0.14.0,<1.0",

    # Data
    "pandas>=2.2.0,<3.0",
    "polars>=1.0.0,<2.0",

    # Config & CLI
    "hydra-core>=1.3.0,<2.0",
    "omegaconf>=2.3.0,<3.0",
    "typer>=0.15.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "rich>=14.0.0,<15.0",

    # Logging
    "loguru>=0.7.0,<1.0",
    "wandb>=0.19.0,<1.0",
    "tqdm>=4.67.0,<5.0",

    # Web/API
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.32.0,<1.0",
    "starlette>=0.41.0,<1.0",
    "aiohttp>=3.11.0,<4.0",
    "httpx>=0.28.0,<1.0",
    "requests>=2.32.0,<3.0",

    # Database
    "sqlalchemy>=2.0.0,<3.0",
    "sqlmodel>=0.0.22,<1.0",
    "alembic>=1.14.0,<2.0",

    # Cloud storage
    "boto3>=1.35.0,<2.0",
    "s3fs>=2024.10.0",
    "fsspec>=2024.10.0",

    # Utils
    "regex>=2024.11.0",
    "pyyaml>=6.0.0,<7.0",
    "json5>=0.10.0,<1.0",
    "cloudpickle>=3.1.0,<4.0",
    "sympy>=1.13.0,<2.0",
    "networkx>=3.4.0,<4.0",
    "packaging>=24.0",
    "psutil>=6.1.0,<7.0",
    "pylatexenc>=2.10,<3.0",
    "jsonschema>=4.23.0,<5.0",
    "jinja2>=3.1.0,<4.0",

    # Testing
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
]

[project.optional-dependencies]
# Inference engines
inference = [
    "vllm>=0.6.0",
    # sglang installed separately from sibling dir
]

# JAX stack (optional)
jax = [
    "jax[cuda12]>=0.4.35",
    "flax>=0.10.0",
    "optax>=0.2.4",
    "jaxtyping>=0.2.34",
]

# Ray distributed
distributed = [
    "ray[default]>=2.40.0",
]

# MLFlow tracking
mlflow = [
    "mlflow>=2.19.0",
]

# Full dev dependencies
dev = [
    "skyrl[inference,distributed,mlflow]",
    "flash-attn>=2.7.0",
    "liger-kernel>=0.5.0",
    "tensordict>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["skyrl*", "skyrl_agent*", "skyrl_gym*", "skyrl_train*"]
namespaces = true

# uv configuration for PyTorch nightly index
[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
nmoe = { path = "../nmoe", editable = true }
sglang = { path = "../sglang/python", editable = true }
# Force torch packages from pytorch-nightly index
torch = { index = "pytorch-nightly" }
torchvision = { index = "pytorch-nightly" }
torchaudio = { index = "pytorch-nightly" }
torchao = { index = "pytorch-nightly" }
triton = { index = "pytorch-nightly" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
ignore = [
    "F722", # Syntax error in annotation - ignored because this doesn't play well with jaxtyping
    "E501", # line too long
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::SyntaxWarning",
]
